refactor: convert DTOs and entities to Java Records
- Convert Payment, PaymentRequest, PaymentResponse, PaymentStatusResponse, ErrorResponse to Records
- Use pattern matching in GlobalExceptionMapper (instanceof pattern variable)
- Reduce boilerplate by ~65% (500 LOC -> 174 LOC)
- Follow openspec/tech/java-modern.md standards