@@ -7,19 +7,22 @@ import java.util.List;
 import java.util.Optional;
 import java.util.UUID;
 import java.util.concurrent.ConcurrentHashMap;
-import java.util.stream.Collectors;
 
 @ApplicationScoped
 public class PaymentRepository {
     private final ConcurrentHashMap<UUID, Payment> store = new ConcurrentHashMap<>();
 
     public Payment save(Payment payment) {
-        payment.setId(UUID.randomUUID());
-        payment.setCreatedAt(java.time.LocalDateTime.now());
-        payment.setUpdatedAt(java.time.LocalDateTime.now());
-        payment.setStatus(PaymentStatus.PENDING);
-        store.put(payment.getId(), payment);
-        return payment;
+        Payment saved = Payment.create(
+            payment.amount(),
+            payment.currency(),
+            payment.customerId(),
+            payment.paymentMethod(),
+            payment.country(),
+            payment.metadata()
+        );
+        store.put(saved.id(), saved);
+        return saved;
     }
 
     public Optional<Payment> findById(UUID id) {
@@ -28,23 +31,23 @@ public class PaymentRepository {
 
     public List<Payment> findAll(String customerId, PaymentStatus status, int limit, int offset) {
         return store.values().stream()
-            .filter(p -> customerId == null || p.getCustomerId().equals(customerId))
-            .filter(p -> status == null || p.getStatus() == status)
+            .filter(p -> customerId == null || p.customerId().equals(customerId))
+            .filter(p -> status == null || p.status() == status)
             .skip(offset)
             .limit(limit)
-            .collect(Collectors.toList());
+            .toList();
     }
 
     public long count(String customerId, PaymentStatus status) {
         return store.values().stream()
-            .filter(p -> customerId == null || p.getCustomerId().equals(customerId))
-            .filter(p -> status == null || p.getStatus() == status)
+            .filter(p -> customerId == null || p.customerId().equals(customerId))
+            .filter(p -> status == null || p.status() == status)
             .count();
     }
 
     public Payment update(Payment payment) {
-        payment.setUpdatedAt(java.time.LocalDateTime.now());
-        store.put(payment.getId(), payment);
-        return payment;
+        Payment updated = payment.withStatus(payment.status());
+        store.put(updated.id(), updated);
+        return updated;
     }
 }
